<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="6dp"
    tools:context=".AddDdnInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="6dp"
            android:text="@string/hint_full_address"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/full_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background_normal"
            android:ems="10"
            android:hint="@string/edt_hint_full_address"
            android:inputType="textMultiLine"
            android:padding="16dp"
            android:textColorHint="#CCCCCC"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="6dp"
            android:text="@string/hint_landmark"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/landmark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background_normal"
            android:ems="10"
            android:hint="@string/edt_hint_landmark"
            android:inputType="textPersonName"
            android:padding="16dp"
            android:textColorHint="#CCCCCC"
            android:textSize="14sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="6dp"
            android:text="@string/hint_town"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/town_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background_normal"
            android:ems="10"
            android:hint="@string/edt_hint_town"
            android:inputType="textPersonName"
            android:padding="16dp"
            android:textColorHint="#CCCCCC"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="6dp"
            android:text="@string/hint_mandal"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/mandal_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background_normal"
            android:ems="10"
            android:hint="@string/edt_hint_mandal"
            android:inputType="textPersonName"
            android:padding="16dp"
            android:textColorHint="#CCCCCC"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="6dp"
            android:text="@string/hint_district"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/district_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background_normal"
            android:ems="10"
            android:hint="@string/edt_hint_district"
            android:inputType="textPersonName"
            android:padding="16dp"
            android:textColorHint="#CCCCCC"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="6dp"
            android:text="@string/hint_pincode"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/pincode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background_normal"
            android:ems="10"
            android:hint="@string/edt_hint_pincode"
            android:inputType="number"
            android:maxLength="6"
            android:padding="16dp"
            android:textColorHint="#CCCCCC"
            android:textSize="14sp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/save_address_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@drawable/ic_check_white_24dp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>