<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/snackbar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingleFragmentActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="6dp"
                        android:layout_marginTop="6dp"
                        android:text="@string/hint_block"
                        android:textSize="12sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Spinner
                            android:id="@+id/block"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:drawable/editbox_background_normal"
                            android:entries="@array/block"
                            android:padding="16dp"
                            android:prompt="@string/hint_block" />

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="16dp"
                            android:src="@drawable/ic_arrow_drop_down_black_24dp" />

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="6dp"
                        android:layout_marginTop="6dp"
                        android:text="@string/hint_floor"
                        android:textSize="12sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Spinner
                            android:id="@+id/floor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:drawable/editbox_background_normal"
                            android:entries="@array/floor"
                            android:padding="16dp"
                            android:prompt="@string/hint_floor" />

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="16dp"
                            android:src="@drawable/ic_arrow_drop_down_black_24dp" />

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="6dp"
                        android:layout_marginTop="6dp"
                        android:text="@string/hint_flat"
                        android:textSize="12sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Spinner
                            android:id="@+id/flat"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:drawable/editbox_background_normal"
                            android:entries="@array/flat"
                            android:padding="16dp"
                            android:prompt="@string/hint_flat" />

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="16dp"
                            android:src="@drawable/ic_arrow_drop_down_black_24dp" />

                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:text="@string/hint_owner_name_text"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/owner_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background_normal"
                android:ems="10"
                android:hint="@string/hint_owner_name"
                android:inputType="textPersonName"
                android:padding="16dp"
                android:textColorHint="#CCCCCC"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:text="@string/hint_owner_aadhar"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/owner_aadhar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background_normal"
                android:ems="10"
                android:hint="@string/hint_owner_aadhar"
                android:inputType="number"
                android:maxLength="12"
                android:padding="16dp"
                android:textColorHint="#CCCCCC"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="6dp"
                android:text="@string/hint_dwelling_type"
                android:textSize="12sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/dwelling_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/editbox_background_normal"
                    android:entries="@array/dwelling_type"
                    android:padding="16dp"
                    android:prompt="@string/hint_dwelling_type" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/ic_arrow_drop_down_black_24dp" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="6dp"
                android:text="@string/hint_structural_type"
                android:textSize="12sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/structural_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/editbox_background_normal"
                    android:entries="@array/structural_type"
                    android:padding="16dp"
                    android:prompt="@string/hint_structural_type" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/ic_arrow_drop_down_black_24dp" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="6dp"
                android:text="@string/hint_assessment_number"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/assessment_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background_normal"
                android:ems="10"
                android:hint="@string/hint_assessment_number"
                android:padding="16dp"
                android:textColorHint="#CCCCCC"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="6dp"
                android:text="@string/hint_emenities"
                android:textSize="12sp" />

            <LinearLayout
                android:id="@+id/emenities_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_marginTop="6dp"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/electricity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_electricity" />

                <CheckBox
                    android:id="@+id/parking"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_parking" />

                <CheckBox
                    android:id="@+id/toilets"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_toilets" />

                <CheckBox
                    android:id="@+id/water_connection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_water_connection" />

                <CheckBox
                    android:id="@+id/wells"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_wells" />

                <CheckBox
                    android:id="@+id/rain_water_harvesting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_rwh" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_check_white_24dp" />

</android.support.design.widget.CoordinatorLayout>